--- a/src/GanttComponents/Pages/GanttComposerDemo.razor
+++ b/src/GanttComponents/Pages/GanttComposerDemo.razor
@@ -58,7 +58,7 @@
                              CurrentZoomFactor="@CurrentZoomFactor"
                              OnZoomLevelChanged="HandleZoomLevelChanged"
                              OnZoomFactorChanged="HandleZoomFactorChanged"
-                             ShowDayWidth="true" />
+                             Preset="TimelineZoomControlPreset.Debug" />
     </div>
 
     <!-- Task Filter Section -->
